--- a/src/app/pages/session/session.component.scss
+++ b/src/app/pages/session/session.component.scss
@@ -42,7 +42,7 @@
 
         @media (max-width: 800px) {
             .choice {
-                font-size: 18px;
+                font-size: 18px !important;
             }   
 
             button {
